force-app/main/default/objects/Trade_Archive__b/Trade_Archive__b.object-meta.xml
<CustomObject>
    <label>Trade Archive</label>
    <pluralLabel>Trade Archives</pluralLabel>
</CustomObject>