force-app/main/default/objects/Trade_Archive__b/fields/Close_URL__c.field-meta.xml
<CustomField>
    <fullName>Close_URL__c</fullName>
    <label>Close URL</label>
    <type>Url</type>
</CustomField>