force-app/main/default/objects/Trade_Archive__b/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Trade Archives</relationshipLabel>
    <relationshipName>Trade_Archive</relationshipName>
    <type>Lookup</type>
</CustomField>