force-app/main/default/objects/Trade_Archive__b/fields/Monthly_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Transaction__c</fullName>
    <label>Monthly Transaction</label>
    <referenceTo>Monthly_Transaction__c</referenceTo>
    <relationshipLabel>Trade Archives</relationshipLabel>
    <relationshipName>Trade_Archive</relationshipName>
    <type>Lookup</type>
</CustomField>