force-app/main/default/objects/Trade_Archive__b/fields/Oanda_ID__c.field-meta.xml
<CustomField>
    <fullName>Oanda_ID__c</fullName>
    <label>Oanda ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>