force-app/main/default/objects/Trade_Archive__b/fields/Open_and_Close_Comments__c.field-meta.xml
<CustomField>
    <fullName>Open_and_Close_Comments__c</fullName>
    <label>Open and Close Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>