force-app/main/default/objects/Trade_Archive__b/fields/Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Open_Date_Time__c</fullName>
    <label>Open Date/Time</label>
    <type>DateTime</type>
</CustomField>