force-app/main/default/objects/Trade_Archive__b/fields/Open_URL__c.field-meta.xml
<CustomField>
    <fullName>Open_URL__c</fullName>
    <label>Open URL</label>
    <type>Url</type>
</CustomField>