force-app/main/default/objects/Trade_Archive__b/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>25</length>
    <type>Text</type>
</CustomField>