force-app/main/default/objects/Trade_Archive__b/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <label>Profit (£)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>