force-app/main/default/objects/Trade_Archive__b/fields/Side__c.field-meta.xml
<CustomField>
    <fullName>Side__c</fullName>
    <label>Side</label>
    <length>10</length>
    <type>Text</type>
</CustomField>